[gd_scene load_steps=10 format=3 uid="uid://cr8lihv3hj1ja"]

[ext_resource type="Script" path="res://game.gd" id="1_5n1et"]
[ext_resource type="PackedScene" uid="uid://cb1p0tolvip70" path="res://window/terminal_window.tscn" id="2_fn2dj"]
[ext_resource type="PackedScene" uid="uid://bon50ledsij76" path="res://window/base_window.tscn" id="3_so8v6"]
[ext_resource type="PackedScene" uid="uid://cf175pyub6aj8" path="res://window/inventory.tscn" id="4_4lsec"]
[ext_resource type="PackedScene" uid="uid://qodkqqspdu45" path="res://window/emergency_reset.tscn" id="5_ih810"]

[sub_resource type="Animation" id="Animation_geqty"]
resource_name = "Hello World"
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"system_diagnostic"
}]
}

[sub_resource type="Animation" id="Animation_5ic00"]
resource_name = "boot OS"
length = 9.0
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.5, 2.6, 4.8),
"transitions": PackedFloat32Array(1, 1, 1),
"values": [{
"args": [],
"method": &"boot_os"
}, {
"args": [],
"method": &"mount_sys_root"
}, {
"args": [],
"method": &"mount_inventory"
}]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Intro")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(7.9),
"transitions": PackedFloat32Array(1),
"values": [{
"args": ["request reset", -1, 1.0, false],
"method": &"play"
}]
}

[sub_resource type="Animation" id="Animation_toqj0"]
resource_name = "request reset"
length = 8.0
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.5, 3.6, 7.5),
"transitions": PackedFloat32Array(1, 1, 1),
"values": [{
"args": [],
"method": &"power_check"
}, {
"args": [],
"method": &"try_hard_reset"
}, {
"args": [],
"method": &"request_hard_reset"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7ii7q"]
_data = {
"Hello World": SubResource("Animation_geqty"),
"boot OS": SubResource("Animation_5ic00"),
"request reset": SubResource("Animation_toqj0")
}

[node name="Game" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5n1et")

[node name="MiniBar" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(0, 64)
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2

[node name="TerminalWindow" parent="." instance=ExtResource("2_fn2dj")]
position = Vector2i(50, 165)

[node name="Intro" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_7ii7q")
}
autoplay = "Hello World"

[node name="InventoryWindow" parent="." instance=ExtResource("3_so8v6")]
position = Vector2i(795, 185)
size = Vector2i(276, 140)
visible = false

[node name="Inventory" parent="InventoryWindow" instance=ExtResource("4_4lsec")]
offset_right = 0.0
offset_bottom = 0.0

[node name="EmergencyResetWindow" parent="." instance=ExtResource("3_so8v6")]
position = Vector2i(635, 430)
size = Vector2i(210, 115)
visible = false

[node name="EmergencyReset" parent="EmergencyResetWindow" instance=ExtResource("5_ih810")]

[connection signal="reset_completed" from="EmergencyResetWindow/EmergencyReset" to="." method="_on_emergency_reset_reset_completed"]
[connection signal="card_inserted" from="EmergencyResetWindow/EmergencyReset/CardSlot" to="." method="_on_card_slot_card_inserted"]
[connection signal="card_removed" from="EmergencyResetWindow/EmergencyReset/CardSlot" to="." method="_on_card_slot_card_removed"]

[editable path="TerminalWindow"]
[editable path="EmergencyResetWindow/EmergencyReset"]
